[metadata]
name = pynetkit
version = 1.2
author = TheKid
author_email = vaidikkhurana@gmail.com
description = A package that can be used for many network and device functions automated by python for the users help. Features other packages that use this one. All these functions are fully automated once you call them in you file and fill the neccesary parameters. Credits to: Ankit Raj Mahaputra (author of pywhatkit) and AI swegart(author of pyautogui). Licensed by MIT.
long_description_content_type = text/markdown
url = https://github.com/Vaidik-hue/pynetkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
 
[options]
packages = find:
python_requires = >=3.7
include_package_data = True